--- a/package.json
+++ b/package.json
@@ -26,11 +26,15 @@
     "@babel/core": "^7.15.5",
     "@babel/node": "^7.15.4",
     "@babel/preset-env": "^7.15.6",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-module-resolver": "^4.1.0",
     "babel-preset-minify": "^0.5.1",
     "babel-watch": "^7.5.0",
     "core-js": "^3.18.2",
+    "css-loader": "^6.3.0",
+    "eslint-webpack-plugin": "^3.0.1",
+    "mini-css-extract-plugin": "^2.4.1",
     "webpack": "^5.57.1",
     "webpack-cli": "^4.8.0",
     "webpack-dev-middleware": "^5.2.1",
