--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,12 @@
 {
-    "rules": {}
+    "parser": "babel-eslint",
+    "extends": ["eslint:recommended"],
+    "rules": {},
+    "env": {
+        "browser": true,
+        "es6": true,
+        "node": true 
+    }
+
 }
+
