--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "eslint": "^7.26.0",
     "express": "~4.16.1",
     "hbs": "^4.0.6",
     "http-errors": "~1.6.3",
