--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "eslint": "^7.26.0",
     "express": "~4.16.1",
     "hbs": "^4.0.6",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
-    "rimraf": "^3.0.2"
+    "prettier": "^2.4.1",
+    "rimraf": "^3.0.2",
+    "webpack": "^5.57.1",
+    "webpack-dev-middleware": "^5.2.1",
+    "webpack-hot-middleware": "^2.25.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.15.7",
@@ -34,12 +37,14 @@
     "babel-watch": "^7.5.0",
     "core-js": "^3.18.2",
     "css-loader": "^6.3.0",
+    "eslint": "^7.26.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-webpack-plugin": "^3.0.1",
     "mini-css-extract-plugin": "^2.4.1",
-    "webpack": "^5.57.1",
     "webpack-cli": "^4.8.0",
-    "webpack-dev-middleware": "^5.2.1",
-    "webpack-dev-server": "^4.3.1",
-    "webpack-hot-middleware": "^2.25.1"
+    "webpack-dev-server": "^4.3.1"   
   }
 }
