--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "build": "npm run b:c && npm run b:s"
   },
   "dependencies": {
+    "app-root-path": "^3.0.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "express": "~4.16.1",
+    "express": "^4.16.4",
+    "express-handlebars": "^5.3.4",
+    "handlebars": "^4.7.7",
     "hbs": "^4.0.6",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
@@ -23,7 +26,8 @@
     "rimraf": "^3.0.2",
     "webpack": "^5.57.1",
     "webpack-dev-middleware": "^5.2.1",
-    "webpack-hot-middleware": "^2.25.1"
+    "webpack-hot-middleware": "^2.25.1",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.15.7",
@@ -45,6 +49,6 @@
     "eslint-webpack-plugin": "^3.0.1",
     "mini-css-extract-plugin": "^2.4.1",
     "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.3.1"   
+    "webpack-dev-server": "^4.3.1"
   }
 }
