--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "NODE_ENV=production node ./dist-server/bin/www",
-    "w:d": "NODE_ENV=development babel-watch --watch ./server/views ./server/bin/www",
-    "w:s": "NODE_ENV=development webpack serve --config ./webpack.dev.config.js --mode development",
+    "start": "cross-env NODE_ENV=production node ./dist-server/bin/www",
+    "dev": "cross-env NODE_ENV=development babel-watch --watch ./server/views ./server/bin/www",
+    "w:s": "cross-env NODE_ENV=development webpack serve --config ./webpack.dev.config.js --mode development",
     "cleans": "rimraf dist-server",
     "cleanc": "rimraf public/js",
     "b:s": "npm run cleans && babel ./server --out-dir dist-server --copy-files",
@@ -17,17 +17,14 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^10.0.0",
-    "express": "^4.16.4",
+    "express": "~4.16.1",
     "express-handlebars": "^5.3.4",
-    "handlebars": "^4.7.7",
-    "hbs": "^4.0.6",
+    "hbs": "^4.1.2",
     "http-errors": "~1.6.3",
+    "mongoose": "^6.0.12",
     "morgan": "~1.9.1",
-    "prettier": "^2.4.1",
+    "nodeenv": "^3.0.71",
     "rimraf": "^3.0.2",
-    "webpack": "^5.57.1",
-    "webpack-dev-middleware": "^5.2.1",
-    "webpack-hot-middleware": "^2.25.1",
     "winston": "^3.3.3"
   },
   "devDependencies": {
@@ -41,15 +38,21 @@
     "babel-preset-minify": "^0.5.1",
     "babel-watch": "^7.5.0",
     "core-js": "^3.18.2",
+    "cross-env": "^7.0.3",
     "css-loader": "^6.3.0",
-    "eslint": "^7.26.0",
+    "eslint": "^7.2.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.25.2",
+    "eslint-import-resolver-babel-module": "^5.3.1",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-webpack-plugin": "^3.0.1",
-    "mini-css-extract-plugin": "^2.4.1",
+    "mini-css-extract-plugin": "^2.4.2",
+    "prettier": "^2.4.1",
+    "webpack": "^5.55.1",
     "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.3.1"
+    "webpack-dev-middleware": "^5.2.1",
+    "webpack-dev-server": "^4.3.0",
+    "webpack-hot-middleware": "^2.25.1"
   }
 }
